--- a/Autoclicker.csproj
+++ b/Autoclicker.csproj
@@ -24,5 +24,6 @@
       <IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
       <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="MouseKeyHook" Version="5.7.1" />
   </ItemGroup>
 </Project>
