--- a/Autoclicker.csproj
+++ b/Autoclicker.csproj
@@ -29,10 +29,10 @@
     <PackageReference Include="Avalonia.Desktop" Version="11.3.0" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.0" />
     <PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.0" />
-    <PackageReference Include="Avalonia.Diagnostics" Version="11.3.0">
+	<!--  <PackageReference Include="Avalonia.Diagnostics" Version="11.3.0"> 
       <IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
       <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
-    </PackageReference>
+    </PackageReference> -->
     <PackageReference Include="MouseKeyHook" Version="5.7.1" />
   </ItemGroup>
 
