--- a/Autoclicker.csproj
+++ b/Autoclicker.csproj
@@ -33,7 +33,9 @@
       <IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
       <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
     </PackageReference> -->
-    <PackageReference Include="MouseKeyHook" Version="5.7.1" />
+
+    <PackageReference Include="SharpHook" Version="6.2.0" />
+    <PackageReference Include="SharpHook.Reactive" Version="6.2.0" />
   </ItemGroup>
 
 </Project>
